--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
+  background: rgb(255, 249, 229);
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  height: 30px;
+  width: 250px;
+  border: none;
+  border-bottom: 1px solid black;
+  background: none;
+  color: black;
+  padding: 0 10px;
+  outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.enter-btn {
+  height: 30px;
+  width: 100px;
+  font-size: 12px;
+  background: none;
+  border: 1px solid black;
+  color: black;
+  margin-left: 10px;
+  transition: .1s ease-in;
+}
+
+.enter-btn:hover {
+  color: rgb(255, 249, 229);
+  background: black;
+  cursor: pointer;
+}
+
+.todo__item {
+  position: absolute;
+  cursor: move;
+  min-width: 215px;
+  color: black;
+  padding: 1em;
+  border-radius: 5px;
+}
+
+.delete-btn {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  background: none;
+  border: none;
+}
+
+.delete-btn:hover {
+  cursor: pointer;
 }
